recursion.logo.lessons.recursion.logo.polygonfractal.PolygonFractal.scala.error
PolygonFractal:6: error: illegal start of simple pattern
    for(var i<-0 to sides){
        ^PolygonFractal:14: error: '<-' expected but '}' found.
  }
  ^